--- a/p1/bert_multilingual.ipynb
+++ b/p1/bert_multilingual.ipynb
@@ -23,21 +23,18 @@
     "import random\n",
     "import os\n",
     "from toolz.functoolz import pipe\n",
-    "from transformers import AutoTokenizer, AutoModelForMaskedLM\n",
+    "from transformers import (\n",
+    "    AutoTokenizer,\n",
+    "    AutoModelForMaskedLM,\n",
+    "    AdamW,\n",
+    "    get_linear_schedule_with_warmup,\n",
+    ")\n",
     "from torch.utils.data import (\n",
     "    TensorDataset,\n",
     "    DataLoader,\n",
     "    RandomSampler,\n",
     "    SequentialSampler,\n",
     "    random_split,\n",
-    ")\n",
-    "\n",
-    "from transformers import (\n",
-    "    BertForSequenceClassification,\n",
-    "    AdamW,\n",
-    "    BertConfig,\n",
-    "    BertTokenizer,\n",
-    "    get_linear_schedule_with_warmup,\n",
     ")"
    ]
   },
@@ -58,7 +55,7 @@
     }
    ],
    "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "device"
    ]
   },
@@ -137,160 +134,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>locale</th>\n",
-       "      <th>partition</th>\n",
-       "      <th>scenario</th>\n",
-       "      <th>intent</th>\n",
-       "      <th>utt</th>\n",
-       "      <th>annot_utt</th>\n",
-       "      <th>worker_id</th>\n",
-       "      <th>slot_method</th>\n",
-       "      <th>judgments</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>297378</th>\n",
-       "      <td>0</td>\n",
-       "      <td>id-ID</td>\n",
-       "      <td>test</td>\n",
-       "      <td>alarm</td>\n",
-       "      <td>alarm_set</td>\n",
-       "      <td>bangunkan saya pukul lima pagi minggu ini</td>\n",
-       "      <td>bangunkan saya [time : pukul lima pagi] [date ...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[{'slot': 'time', 'method': 'translation'}, {'...</td>\n",
-       "      <td>[{'worker_id': '15', 'intent_score': 1, 'slots...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>297379</th>\n",
-       "      <td>1</td>\n",
-       "      <td>id-ID</td>\n",
-       "      <td>train</td>\n",
-       "      <td>alarm</td>\n",
-       "      <td>alarm_set</td>\n",
-       "      <td>bagunkan saya jam sembilan pagi hari jumat</td>\n",
-       "      <td>bagunkan saya [time : jam sembilan pagi] hari ...</td>\n",
-       "      <td>21</td>\n",
-       "      <td>[{'slot': 'time', 'method': 'translation'}, {'...</td>\n",
-       "      <td>[{'worker_id': '7', 'intent_score': 1, 'slots_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>297380</th>\n",
-       "      <td>2</td>\n",
-       "      <td>id-ID</td>\n",
-       "      <td>train</td>\n",
-       "      <td>alarm</td>\n",
-       "      <td>alarm_set</td>\n",
-       "      <td>atur alarm dua jam dari sekarang</td>\n",
-       "      <td>atur alarm [time : dua jam dari sekarang]</td>\n",
-       "      <td>18</td>\n",
-       "      <td>[{'slot': 'time', 'method': 'translation'}]</td>\n",
-       "      <td>[{'worker_id': '9', 'intent_score': 1, 'slots_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>297381</th>\n",
-       "      <td>3</td>\n",
-       "      <td>id-ID</td>\n",
-       "      <td>test</td>\n",
-       "      <td>audio</td>\n",
-       "      <td>audio_volume_mute</td>\n",
-       "      <td>diam</td>\n",
-       "      <td>diam</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[{'worker_id': '15', 'intent_score': 1, 'slots...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>297382</th>\n",
-       "      <td>4</td>\n",
-       "      <td>id-ID</td>\n",
-       "      <td>train</td>\n",
-       "      <td>audio</td>\n",
-       "      <td>audio_volume_mute</td>\n",
-       "      <td>olly tenang</td>\n",
-       "      <td>olly tenang</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[{'worker_id': '7', 'intent_score': 1, 'slots_...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        id locale partition scenario             intent  \\\n",
-       "297378   0  id-ID      test    alarm          alarm_set   \n",
-       "297379   1  id-ID     train    alarm          alarm_set   \n",
-       "297380   2  id-ID     train    alarm          alarm_set   \n",
-       "297381   3  id-ID      test    audio  audio_volume_mute   \n",
-       "297382   4  id-ID     train    audio  audio_volume_mute   \n",
-       "\n",
-       "                                               utt  \\\n",
-       "297378   bangunkan saya pukul lima pagi minggu ini   \n",
-       "297379  bagunkan saya jam sembilan pagi hari jumat   \n",
-       "297380            atur alarm dua jam dari sekarang   \n",
-       "297381                                        diam   \n",
-       "297382                                 olly tenang   \n",
-       "\n",
-       "                                                annot_utt  worker_id  \\\n",
-       "297378  bangunkan saya [time : pukul lima pagi] [date ...          2   \n",
-       "297379  bagunkan saya [time : jam sembilan pagi] hari ...         21   \n",
-       "297380          atur alarm [time : dua jam dari sekarang]         18   \n",
-       "297381                                               diam          2   \n",
-       "297382                                        olly tenang          1   \n",
-       "\n",
-       "                                              slot_method  \\\n",
-       "297378  [{'slot': 'time', 'method': 'translation'}, {'...   \n",
-       "297379  [{'slot': 'time', 'method': 'translation'}, {'...   \n",
-       "297380        [{'slot': 'time', 'method': 'translation'}]   \n",
-       "297381                                                 []   \n",
-       "297382                                                 []   \n",
-       "\n",
-       "                                                judgments  \n",
-       "297378  [{'worker_id': '15', 'intent_score': 1, 'slots...  \n",
-       "297379  [{'worker_id': '7', 'intent_score': 1, 'slots_...  \n",
-       "297380  [{'worker_id': '9', 'intent_score': 1, 'slots_...  \n",
-       "297381  [{'worker_id': '15', 'intent_score': 1, 'slots...  \n",
-       "297382  [{'worker_id': '7', 'intent_score': 1, 'slots_...  "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df[\"locale\"] == \"id-ID\"].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -360,7 +203,7 @@
    ],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(\"xlm-roberta-base\")\n",
-    "model = AutoModelForMaskedLM.from_pretrained(\"xlm-roberta-base\")"
+    "model = AutoModelForMaskedLM.from_pretrained(\"xlm-roberta-base\").to(device)"
    ]
   },
   {
@@ -379,7 +222,7 @@
     }
    ],
    "source": [
-    "print(\" Original: \", utterances[0])\n",
+    "print(\"Original: \", utterances[0])\n",
     "\n",
     "# Print the sentence split into tokens.\n",
     "print(\"Tokenized: \", tokenizer.tokenize(utterances[0]))\n",
@@ -456,13 +299,13 @@
     "    #   (5) Pad or truncate the sentence to `max_length`\n",
     "    #   (6) Create attention masks for [PAD] tokens.\n",
     "    encoded_dict = tokenizer.encode_plus(\n",
-    "        utt,  # Sentence to encode.\n",
-    "        add_special_tokens=True,  # Add '[CLS]' and '[SEP]'\n",
-    "        max_length=max_len,  # Pad & truncate all sentences.\n",
+    "        utt,\n",
+    "        add_special_tokens=True,\n",
+    "        max_length=max_len,\n",
     "        truncation=True,\n",
     "        padding=\"max_length\",\n",
-    "        return_attention_mask=True,  # Construct attn. masks.\n",
-    "        return_tensors=\"pt\",  # Return pytorch tensors.\n",
+    "        return_attention_mask=True,\n",
+    "        return_tensors=\"pt\",\n",
     "    )\n",
     "\n",
     "    # Add the encoded sentence to the list.\n",
@@ -510,34 +353,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The DataLoader needs to know our batch size for training, so we specify it\n",
-    "# here. For fine-tuning BERT on a specific task, the authors recommend a batch\n",
-    "# size of 16 or 32.\n",
+    "# For fine-tuning BERT on a specific task, the authors recommend a batch size of 16 or 32.\n",
     "batch_size = 32\n",
     "\n",
-    "# Create the DataLoaders for our training and validation sets.\n",
-    "# We'll take training samples in random order.\n",
     "train_dataloader = DataLoader(\n",
-    "    train_dataset,  # The training samples.\n",
-    "    sampler=RandomSampler(train_dataset),  # Select batches randomly\n",
-    "    batch_size=batch_size,  # Trains with this batch size.\n",
+    "    train_dataset,\n",
+    "    sampler=RandomSampler(train_dataset),\n",
+    "    batch_size=batch_size,\n",
     ")\n",
     "\n",
-    "# For validation the order doesn't matter, so we'll just read them sequentially.\n",
     "validation_dataloader = DataLoader(\n",
-    "    val_dataset,  # The validation samples.\n",
-    "    sampler=SequentialSampler(val_dataset),  # Pull out batches sequentially.\n",
-    "    batch_size=batch_size,  # Evaluate with this batch size.\n",
+    "    val_dataset,\n",
+    "    sampler=SequentialSampler(val_dataset),\n",
+    "    batch_size=batch_size,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = model.to(device)"
    ]
   },
   {
@@ -548,8 +377,8 @@
    "source": [
     "optimizer = AdamW(\n",
     "    model.parameters(),\n",
-    "    lr=2e-5,  # args.learning_rate - default is 5e-5, our notebook had 2e-5\n",
-    "    eps=1e-8,  # args.adam_epsilon  - default is 1e-8.\n",
+    "    lr=2e-5,\n",
+    "    eps=1e-8,\n",
     ")"
    ]
   },
@@ -559,19 +388,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of training epochs. The BERT authors recommend between 2 and 4.\n",
-    "# We chose to run for 4, but we'll see later that this may be over-fitting the\n",
-    "# training data.\n",
     "epochs = 4\n",
     "\n",
-    "# Total number of training steps is [number of batches] x [number of epochs].\n",
-    "# (Note that this is not the same as the number of training samples).\n",
     "total_steps = len(train_dataloader) * epochs\n",
     "\n",
     "# Create the learning rate scheduler.\n",
     "scheduler = get_linear_schedule_with_warmup(\n",
     "    optimizer,\n",
-    "    num_warmup_steps=0,  # Default value in run_glue.py\n",
+    "    num_warmup_steps=0,\n",
     "    num_training_steps=total_steps,\n",
     ")"
    ]
@@ -616,122 +440,110 @@
     "np.random.seed(seed_val)\n",
     "torch.manual_seed(seed_val)\n",
     "torch.cuda.manual_seed_all(seed_val)\n",
+    "\n",
     "training_stats = []\n",
     "\n",
     "# Measure the total training time for the whole run.\n",
     "total_t0 = time.time()\n",
     "\n",
-    "# For each epoch...\n",
-    "for epoch_i in range(0, epochs):\n",
+    "for epoch in range(epochs):\n",
     "\n",
-    "    # ========================================\n",
-    "    #               Training\n",
-    "    # ========================================\n",
-    "    # Perform one full pass over the training set.\n",
     "    print(\"\")\n",
-    "    print(\"======== Epoch {:} / {:} ========\".format(epoch_i + 1, epochs))\n",
+    "    print(f\"======== Epoch {epoch} / {epochs} ========\")\n",
     "    print(\"Training...\")\n",
+    "\n",
     "    # Measure how long the training epoch takes.\n",
     "    t0 = time.time()\n",
+    "\n",
     "    total_train_loss = 0\n",
+    "\n",
     "    model.train()\n",
+    "\n",
     "    for step, batch in enumerate(train_dataloader):\n",
-    "        # Unpack this training batch from our dataloader.\n",
-    "        #\n",
-    "        # As we unpack the batch, we'll also copy each tensor to the device using the\n",
-    "        # `to` method.\n",
-    "        #\n",
-    "        # `batch` contains three pytorch tensors:\n",
-    "        #   [0]: input ids\n",
-    "        #   [1]: attention masks\n",
-    "        #   [2]: labels\n",
     "        b_input_ids = batch[0].to(device)\n",
     "        b_input_mask = batch[1].to(device)\n",
     "        b_labels = batch[2].to(device)\n",
-    "        optimizer.zero_grad()\n",
+    "\n",
     "        output = model(\n",
     "            b_input_ids,\n",
     "            token_type_ids=None,\n",
     "            attention_mask=b_input_mask,\n",
     "            labels=b_labels,\n",
     "        )\n",
+    "\n",
     "        loss = output.loss\n",
+    "\n",
     "        total_train_loss += loss.item()\n",
-    "        # Perform a backward pass to calculate the gradients.\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
     "        loss.backward()\n",
+    "\n",
     "        # Clip the norm of the gradients to 1.0.\n",
     "        # This is to help prevent the \"exploding gradients\" problem.\n",
     "        torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
-    "        # Update parameters and take a step using the computed gradient.\n",
-    "        # The optimizer dictates the \"update rule\"--how the parameters are\n",
-    "        # modified based on their gradients, the learning rate, etc.\n",
+    "\n",
     "        optimizer.step()\n",
-    "        # Update the learning rate.\n",
     "        scheduler.step()\n",
     "\n",
-    "    # Calculate the average loss over all of the batches.\n",
     "    avg_train_loss = total_train_loss / len(train_dataloader)\n",
     "\n",
-    "    # Measure how long this epoch took.\n",
     "    training_time = format_time(time.time() - t0)\n",
+    "\n",
     "    print(\"\")\n",
     "    print(\"  Average training loss: {0:.2f}\".format(avg_train_loss))\n",
     "    print(\"  Training epcoh took: {:}\".format(training_time))\n",
-    "    # ========================================\n",
-    "    #               Validation\n",
-    "    # ========================================\n",
-    "    # After the completion of each training epoch, measure our performance on\n",
-    "    # our validation set.\n",
+    "\n",
     "    print(\"\")\n",
     "    print(\"Running Validation...\")\n",
     "    t0 = time.time()\n",
-    "    # Put the model in evaluation mode--the dropout layers behave differently\n",
-    "    # during evaluation.\n",
+    "\n",
     "    model.eval()\n",
+    "\n",
     "    # Tracking variables\n",
     "    total_eval_accuracy = 0\n",
     "    best_eval_accuracy = 0\n",
     "    total_eval_loss = 0\n",
     "    nb_eval_steps = 0\n",
+    "\n",
     "    # Evaluate data for one epoch\n",
     "    for batch in validation_dataloader:\n",
     "        b_input_ids = batch[0].to(device)\n",
     "        b_input_mask = batch[1].to(device)\n",
     "        b_labels = batch[2].to(device)\n",
-    "        # Tell pytorch not to bother with constructing the compute graph during\n",
-    "        # the forward pass, since this is only needed for backprop (training).\n",
-    "        with torch.no_grad():\n",
+    "\n",
+    "        with torch.inference_mode():\n",
     "            output = model(\n",
     "                b_input_ids,\n",
     "                token_type_ids=None,\n",
     "                attention_mask=b_input_mask,\n",
     "                labels=b_labels,\n",
     "            )\n",
-    "        loss = output.loss\n",
+    "\n",
+    "            loss = output.loss\n",
+    "\n",
     "        total_eval_loss += loss.item()\n",
-    "        # Move logits and labels to CPU if we are using GPU\n",
+    "\n",
     "        logits = output.logits\n",
     "        logits = logits.detach().cpu().numpy()\n",
     "        label_ids = b_labels.to(\"cpu\").numpy()\n",
-    "        # Calculate the accuracy for this batch of test sentences, and\n",
-    "        # accumulate it over all batches.\n",
+    "\n",
     "        total_eval_accuracy += flat_accuracy(logits, label_ids)\n",
-    "    # Report the final accuracy for this validation run.\n",
+    "\n",
     "    avg_val_accuracy = total_eval_accuracy / len(validation_dataloader)\n",
     "    print(\"  Accuracy: {0:.2f}\".format(avg_val_accuracy))\n",
-    "    # Calculate the average loss over all of the batches.\n",
+    "\n",
     "    avg_val_loss = total_eval_loss / len(validation_dataloader)\n",
-    "    # Measure how long the validation run took.\n",
+    "\n",
     "    validation_time = format_time(time.time() - t0)\n",
+    "\n",
     "    if avg_val_accuracy > best_eval_accuracy:\n",
     "        torch.save(model, \"bert_model\")\n",
     "        best_eval_accuracy = avg_val_accuracy\n",
-    "    # print(\"  Validation Loss: {0:.2f}\".format(avg_val_loss))\n",
-    "    # print(\"  Validation took: {:}\".format(validation_time))\n",
-    "    # Record all statistics from this epoch.\n",
+    "\n",
     "    training_stats.append(\n",
     "        {\n",
-    "            \"epoch\": epoch_i + 1,\n",
+    "            \"epoch\": epoch + 1,\n",
     "            \"Training Loss\": avg_train_loss,\n",
     "            \"Valid. Loss\": avg_val_loss,\n",
     "            \"Valid. Accur.\": avg_val_accuracy,\n",
